fixed firefox and safari bugs for svg letter spacing, selling point card backface visibility and transparent text for menu sunset animation

--- a/assets/scss/front-page/selling-points.scss
+++ b/assets/scss/front-page/selling-points.scss
@@ -44,6 +44,7 @@
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    transform: rotateY(0);
 }
 
 .flip-card-back {
