--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -258,6 +258,7 @@ a.mobile-button.hidden {
     }
 
     .menu-main-container a {
+        display: block;
         text-decoration: none;
         color: var(--white);
         font-weight: 700;
@@ -271,8 +272,11 @@ a.mobile-button.hidden {
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
+        -webkit-animation: rainbow_animation 10s ease-in-out infinite;
         animation: rainbow_animation 10s ease-in-out infinite;
-        background-size: 400% 100%;                
+        background-size: 400% 100%;
+        border: none;
+        outline: none;        
         @keyframes rainbow_animation {
             0%,100% {background-position: 0 0;}
             50% {background-position: 100% 0;}
